--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI OEM コンシェルジュ</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;600;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              'brand-primary': '#006837',
-              'brand-secondary': '#3A5A40',
-              'brand-light': '#A3B18A',
-              'brand-accent': '#DAD7CD',
-              'brand-bg': '#F7F7F7',
+              'brand-primary': '#C9A961',
+              'brand-secondary': '#2C2C2C',
+              'brand-light': '#8B8B7A',
+              'brand-accent': '#D4C5B0',
+              'brand-bg': '#F5F3F0',
+            },
+            fontFamily: {
+              'serif': ['Georgia', 'Garamond', 'serif'],
+              'serif-jp': ["'Noto Serif JP'", 'serif'],
+              'display': ['Playfair Display', 'serif'],
             },
           },
         },
@@ -61,6 +67,12 @@
       // The execution environment is expected to populate process.env.API_KEY.
       if (typeof window.process === 'undefined') {
         window.process = { env: {} };
+      }
+      
+      // Set API key from meta tag or global variable
+      const apiKey = document.querySelector('meta[name="gemini-api-key"]')?.getAttribute('content') || window.__GEMINI_API_KEY__;
+      if (apiKey) {
+        window.process.env.API_KEY = apiKey;
       }
     </script>
     <div id="root"></div>
